--- a/html-css/module-6/css/style.css
+++ b/html-css/module-6/css/style.css
@@ -155,7 +155,7 @@
   }
   
   .service-list .service-item:first-child {
-    background-image: url(/img/icons/ALARM-1.png);
+    background-image: url(../img/icons/ALARM-1.png);
     background-repeat: no-repeat;
     background-position: left center;
   }
