--- a/html-css/module-7/css/style.css
+++ b/html-css/module-7/css/style.css
@@ -4,7 +4,7 @@
     --black: #222222;
     --font-roboto: 'Roboto Slab', serif;
     --font-montserrat: 'Montserrat', sans-serif;
-    --font-montserratb: 'Montserrat-Black', sans-serif;
+    --font-montserratb: 'Montserratb', sans-serif;
     --font-leckerli: 'Leckerli One';
     --font-ptserif: 'PT-Serif-itl';
   }
@@ -14,25 +14,27 @@
    font-style: normal;
    font-weight: 400;
    src: local('Leckerli One'), local('LeckerliOne-Regular'),
-        url('/css/fonts/leckerli-one-v10-latin-regular.woff') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('/css/fonts/leckerli-one-v10-latin-regular.woff2') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url('../fonts/leckerli-one-v10-latin-regular.woff') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url('../fonts/leckerli-one-v10-latin-regular.woff2') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }
 /* montserrat-regular - latin_cyrillic */
+/* montserrat-regular - latin */
 @font-face {
-   font-family: 'Montserrat';
-   font-style: normal;
-   font-weight: 400;
-   src: local('Montserrat Regular'), local('Montserrat-Regular'),
-        url('/css/fonts/montserrat-v14-latin_cyrillic-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('/css/fonts/montserrat-v14-latin_cyrillic-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
- }
- @font-face {
     font-family: 'Montserrat';
     font-style: normal;
-    font-weight: 900;
-    src: local('Montserrat Black'), local('Montserrat-Black'),
-         url('../fonts/montserrat-v14-latin_cyrillic-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/montserrat-v14-latin_cyrillic-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-weight: 400;
+    src: local('Montserrat Regular'), local('Montserrat-Regular'),
+         url('../fonts/montserrat-v14-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/montserrat-v14-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* montserrat-600 - latin */
+  @font-face {
+    font-family: 'Montserratb';
+    font-style: normal;
+    font-weight: 600;
+    src: local('Montserrat SemiBold'), local('Montserrat-SemiBold'),
+         url('../fonts/montserrat-v14-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/montserrat-v14-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 /* roboto-slab-regular - latin */
 @font-face {
@@ -50,8 +52,8 @@
    font-style: normal;
    font-weight: 400;
    src: local('PT Serif'), local('PTSerif-Regular'),
-        url('/css/fonts/pt-serif-v11-latin_cyrillic-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('/css/fonts/pt-serif-v11-latin_cyrillic-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url('../fonts/pt-serif-v11-latin_cyrillic-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url('../fonts/pt-serif-v11-latin_cyrillic-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }
  /* pt-serif-italic - latin_cyrillic */
  @font-face {
@@ -59,8 +61,8 @@
    font-style: italic;
    font-weight: 400;
    src: local('PT Serif Italic'), local('PTSerif-Italic'),
-        url('/css/fonts/pt-serif-v11-latin_cyrillic-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-        url('/css/fonts/pt-serif-v11-latin_cyrillic-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+        url('../fonts/pt-serif-v11-latin_cyrillic-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url('../fonts/pt-serif-v11-latin_cyrillic-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }
 
 .visually-hidden:not(:focus):not(:active),
@@ -113,13 +115,17 @@ img {
        display: flex;
        align-items: center;
        justify-content: space-between;
-       min-height: 100px;
+       padding-top: 50px;
+       padding-bottom: 100px;
   }
 .logo{
     font-family: var(--font-leckerli);
     font-size: 26px;
     line-height: 40px;
     color: var(--yellow);
+}
+.logo:hover{
+    color: palevioletred;
 }
 .nav-list{
     display: flex;
@@ -128,12 +134,16 @@ img {
 }
 .nav-link{
     color: var(--grey);
-    font-family: var(--font-montserrat);
+    font-family: var(--font-montserratb);
     font-size: 14px;
+    line-height: 40px;
     text-transform: uppercase;
 }
 .nav-link:hover{
     color: var(--yellow);
+}
+.services{
+    padding-bottom: 100px;
 }
 .services-title{
 font-family: var(--font-montserratb);
@@ -141,7 +151,9 @@ color: var(--black);
 text-align: center;
 font-size: 40px;
 text-transform: uppercase;
-line-height: 20px;
+line-height: 75px;
+letter-spacing: -1px;
+
 }
 .subtitle{
     font-family: var(--font-ptserif);
@@ -149,14 +161,17 @@ line-height: 20px;
     font-size: 16px;
     text-align: center;
     display: block;
-    line-height: 18px;
+    line-height: 20px;
+    margin-bottom: 60px;
 }
+
 .services__list{
     display: flex;
     justify-content: space-between;
-    padding: 0;
+    align-items: center;
+    
 }
-.service__list-item{
+.services__list-item{
     width: 290px;
     text-align: center;
     
@@ -166,11 +181,19 @@ line-height: 20px;
     font-family: var(--font-roboto);
     color: var(--grey);
     font-size: 14px;
+    letter-spacing: .35px;
+
+
+    
 }
 .services__list-item-title{
     text-align: center;
     font-family: var(--font-montserratb);
     color: (black);
+    font-size: 18px;
+    line-height: 75px;
+    letter-spacing: .45px;
+
 }
 .services__list-item::before {
     display: block;
@@ -181,7 +204,10 @@ line-height: 20px;
     border-radius: 50%;
     margin: 0 auto;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center; 
+}
+.services__list-item:hover::before{
+    border: 4px solid palevioletred;
 }
 .services__list-item:first-child::before {
     background-image: url("../img/basket.png");
@@ -199,14 +225,19 @@ line-height: 20px;
      background-image: url(/img/map.png);
      background-repeat: no-repeat;
      background-position-x: 70%;
+     background-position-y: 80%;
      min-height: 650px;
 }
+
 .contact-us-title{
      color: #ffffff;
      font-size: 40px;
+     line-height: 75px;
      text-align: center;
      font-family: var(--font-montserratb);
      text-transform: uppercase;
+     letter-spacing: -1px;
+     padding-top: 80px;
 }
 
 
@@ -215,6 +246,7 @@ line-height: 20px;
     text-align: center;
     display: block;
     font-family: var(--font-ptserif);
+    margin-bottom: 70px;
 }
 .forms{
     display: flex;
@@ -224,26 +256,43 @@ line-height: 20px;
 
 .contact__form-input{
     font-family: var(--font-montserratb);
+    color: var(--grey);
+    text-indent: 20px;
     width: 454px;
     height: 50px;
     display: flex;
     margin-bottom: 28px;
+    font-size: 14px;
 }
 .contact__form-input::placeholder{
     text-transform: uppercase;
     font-family: var(--font-montserratb);
     font-size: 14px;
     text-indent: 20px;
+    letter-spacing: .35px;
 }
 .contact__form-input[required]:focus:valid{
-    border: 4px solid red;
+    border: 4px solid green;
 }
 .contact__form-input[required]:focus:invalid {
-    border: 4px solid green;
+    border: 4px solid red;
 }
 .contact__form-textarea{
     width: 454px;
     height: 208px;
+    font-family: var(--font-montserratb);
+    color: var(--grey);
+    text-indent: 20px;
+    font-size: 14px;
+    line-height: 36px;
+}
+.contact__form-textarea::placeholder{
+font-family: var(--font-montserratb);
+text-indent: 20px;
+font-size: 14px;
+letter-spacing: .35px;
+text-transform: uppercase;
+line-height: 40px;
 }
 .contact__form-btn{
     display: block;
