--- a/html-css/module-7/css/style.css
+++ b/html-css/module-7/css/style.css
@@ -206,9 +206,7 @@ letter-spacing: -1px;
     background-repeat: no-repeat;
     background-position: center; 
 }
-.services__list-item:hover::before{
-    border: 4px solid palevioletred;
-}
+
 .services__list-item:first-child::before {
     background-image: url("../img/basket.png");
 }
@@ -222,7 +220,7 @@ letter-spacing: -1px;
 }
 .contact-us{
      background-color: #222222;  
-     background-image: url(/img/map.png);
+     background-image: url("../img/map.png");
      background-repeat: no-repeat;
      background-position-x: 70%;
      background-position-y: 80%;
