--- a/html-css/module-8/css/style.css
+++ b/html-css/module-8/css/style.css
@@ -7,6 +7,10 @@
     --grey: #333333;
     --pink: #ff4e50;
     --white: #ffffff;
+    --color-light-grey: #666666;
+  --color-dark-grey: #333333;
+  --color-white: #ffffff;
+  --color-red: #ff4e50;
     --font-robotol: 'Robotol', sans-serif; font-weight: 300;
     --font-montserratb: 'Montserratb', sans-serif; font-weight: 700;
   }
@@ -66,41 +70,55 @@ ul,
 ol {
     list-style: none;
 }
-
 .container{
     width: 320px;
-    margin: 0 auto;
-    padding: 0 10px;
+    display: block;
+}
+
+.header{
+    width: 320px;
+    background-position: top center;
     background-image: url('../img/main-pic.png');
     background-repeat: no-repeat;
+    padding-top: 20px;
+    padding-bottom: 130px;
 }
 
 .nav-item{
     display: inline-block;
+    border: solid 2px var(--white) ;
+    width: 90px;
+    
+    margin: 0 auto;
 }
 .nav-link{
     font-family: var(--font-montserratb);
     font-size: 14px;
     line-height: 18px;
     color: var(--white);
+    
 }
 .logo{
     font-family: var(--font-montserratb);
     color: var(--white);
     font-size: 20px;
     line-height: 24px;
+    text-align: center;
     
 }
 
-.main-title{
+.header-title{
     font-family: var(--font-montserratb);
     color: var(--white);
     font-size: 30px;
     line-height: 36px;
+    text-align: center;
 }
-    .main-subtitle{
+    .header-subtitle{
         font-family: var(--font-robotol);
         color: var(--white);
+        opacity: .9;
+        font-size: 18px;
     }
 
     .find-btn{
@@ -119,3 +137,138 @@ ol {
         cursor: pointer;
         
     }
+
+
+    .section-partner {
+        padding-top: 70px;
+        padding-bottom: 57px;
+      }
+      
+      .section-partner-title {
+        font-family: var(--font-montserratb);
+        font-weight: 700;
+        font-size: 22px;
+        color: var(--color-dark-grey);
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        margin-bottom: 15px;
+      }
+      
+      .partner-list {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+      
+      .partner-item {
+        display: block;
+        width: 320px;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-bottom: 25px;
+      }
+      
+      .partner-photo {
+        width: 121px;
+        height: 121px;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin: 0 auto;
+        position: relative;
+        margin-bottom: 20px;
+      }
+      
+      .partner-photo-first {
+        background-image: url(../img/mustash-pic.png);
+      }
+      
+      .partner-photo-second {
+        background-image: url(../img/second-dark-pic.png);
+      }
+      
+      .partner-photo-third {
+        background-image: url(../img/grey-smile.png);
+      }
+      
+      .partner-photo-fourth {
+        background-image: url(../img/man-smile.png);
+      }
+      
+      .partner-photo::after {
+        display: block;
+        content: "";
+        position: absolute;
+        width: 41px;
+        height: 41px;
+        background-position: center;
+        background-repeat: no-repeat;
+        border: var(--color-white) 4px solid;
+        border-radius: 50%;
+        right: 0;
+        bottom: 0;
+      }
+      
+      .partner-photo-first::after {
+        background-color: var(--color-red);
+        background-image: url(../img/icons/tv-icon.png);
+      }
+      
+      .partner-photo-second::after {
+        background-image: url(../img/icons/tv-icon.png);
+        background-color: #ffa507;
+      }
+      
+      .partner-photo-third::after {
+        background-image: url(../img/icons/alchemist-icon-2.png);
+        background-color: #1cd7ad;
+      }
+      
+      .partner-photo-fourth::after {
+        background-image: url(../img/icons/telegram-icon-4.png);
+        background-color: #4e73db;
+      }
+      
+      .partner-name {
+        display: block;
+        margin: 0 auto;
+        font-family: var(--font-montserratb);
+        font-weight: 700;
+        font-size: 14px;
+        color: var(--color-dark-grey);
+        text-align: center;
+        margin-bottom: 15px;
+      }
+      
+      .partner-status {
+        display: block;
+        margin: 0 auto;
+        font-family: var(--font-robotol);
+        font-weight: 300;
+        font-size: 14px;
+        color: var(--color-light-grey);
+        text-align: center;
+      }
+      
+      .partner-btn {
+        display: block;
+        width: 284px;
+        font-family: var(--font-montserratb);
+        font-weight: 700;
+        font-size: 14px;
+        text-decoration: none;
+        color: var(--color-red);
+        background-color: var(--color-white);
+        text-align: center;
+        line-height: 44px;
+        border: var(--color-red) 2px solid;
+        border-radius: 40px 40px 40px 40px;
+        margin: 0 auto;
+      }
+      
+      .partner-btn:hover,
+      .partner-btn:focus {
+        color: var(--color-white);
+        background-color: var(--color-red);
+        border: none;
+      }
