--- a/html-css/module-10/css/style.css
+++ b/html-css/module-10/css/style.css
@@ -261,7 +261,7 @@
   }
   
   .service-list .service-item:first-child {
-    background-image: url(../img/icons/ALARM-1.png);
+    background-image: url(../img/icons/ALARM.svg);
     background-repeat: no-repeat;
     background-position: left center;
   }
@@ -462,4 +462,14 @@
     text-transform: uppercase;
     line-height: 40px;
     cursor: pointer;
+  }
+
+  /* MEDIA */
+  @media (min-resolution: 192dpi), (min-resolution:2dppx){
+    .header{
+      background-image: linear-gradient( 90deg, rgba(252,227,138,0.9) 0%, rgba(243,129,129,0.9) 100%),
+      url(../img/pictures/Layer15@2x-min.jpg);
+    }
+
+
   }
